--- a/src/components/UI/Spinner/Spinner.css
+++ b/src/components/UI/Spinner/Spinner.css
@@ -1,85 +1,67 @@
-.sk_chase {
-  width: 40px;
-  height: 40px;
+.Loader,
+.Loader:before,
+.Loader:after {
+  border-radius: 50%;
+}
+.Loader {
+  color: #521751;
+  font-size: 11px;
+  text-indent: -99999em;
+  margin: 55px auto;
   position: relative;
-  animation: sk_chase 2.5s infinite linear both;
+  width: 10em;
+  height: 10em;
+  box-shadow: inset 0 0 0 1em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
 }
-
-.sk_chase_dot {
-  width: 100%;
-  height: 100%;
+.Loader:before,
+.Loader:after {
   position: absolute;
-  left: 0;
-  top: 0;
-  animation: sk_chase_dot 2s infinite ease-in-out both;
-}
-
-.sk_chase_dot:before {
   content: "";
-  display: block;
-  width: 25%;
-  height: 25%;
-  background-color: #fff;
-  border-radius: 100%;
-  animation: sk_chase_dot-before 2s infinite ease-in-out both;
 }
-
-.sk_chase_dot:nth-child(1) {
-  animation-delay: -1.1s;
+.Loader:before {
+  width: 5.2em;
+  height: 10.2em;
+  background: #fff;
+  border-radius: 10.2em 0 0 10.2em;
+  top: -0.1em;
+  left: -0.1em;
+  -webkit-transform-origin: 5.2em 5.1em;
+  transform-origin: 5.2em 5.1em;
+  -webkit-animation: load2 2s infinite ease 1.5s;
+  animation: load2 2s infinite ease 1.5s;
 }
-.sk_chase_dot:nth-child(2) {
-  animation-delay: -1s;
+.Loader:after {
+  width: 5.2em;
+  height: 10.2em;
+  background: #fff;
+  border-radius: 0 10.2em 10.2em 0;
+  top: -0.1em;
+  left: 5.1em;
+  -webkit-transform-origin: 0px 5.1em;
+  transform-origin: 0px 5.1em;
+  -webkit-animation: load2 2s infinite ease;
+  animation: load2 2s infinite ease;
 }
-.sk_chase_dot:nth-child(3) {
-  animation-delay: -0.9s;
-}
-.sk_chase_dot:nth-child(4) {
-  animation-delay: -0.8s;
-}
-.sk_chase_dot:nth-child(5) {
-  animation-delay: -0.7s;
-}
-.sk_chase_dot:nth-child(6) {
-  animation-delay: -0.6s;
-}
-.sk_chase_dot:nth-child(1):before {
-  animation-delay: -1.1s;
-}
-.sk_chase_dot:nth-child(2):before {
-  animation-delay: -1s;
-}
-.sk_chase_dot:nth-child(3):before {
-  animation-delay: -0.9s;
-}
-.sk_chase_dot:nth-child(4):before {
-  animation-delay: -0.8s;
-}
-.sk_chase_dot:nth-child(5):before {
-  animation-delay: -0.7s;
-}
-.sk_chase_dot:nth-child(6):before {
-  animation-delay: -0.6s;
-}
-
-@keyframes sk_chase {
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes sk_chase_dot {
-  80%,
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes sk_chase_dot-before {
-  50% {
-    transform: scale(0.4);
-  }
-  100%,
+@-webkit-keyframes load2 {
   0% {
-    transform: scale(1);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
